[project]
name = "et"
authors = [
    {name = "Eric Yu", email = "erict12321@gmail.com"},
]
dependencies = [
    "loguru",
    "pyyaml",
    "dotwiz",
    "ffmpeg-python",
    "pyyaml",
    "prettytable",
    "treelib",
    "matplotlib",
    "wandb",
    "tensorboard",
    "cyclopts",
    "jax",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
known_first_party = [""]
